<resources>
    <string name="app_name">Head &amp; Legs</string>
    <string name="join">Join Game</string>
    <string name="new_game">New Game</string>
    <string name="create_game">Create</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_code">Enter game code</string>
    <string name="game">Game</string>
    <string name="players">Players:</string>
    <string name="heads">Heads:</string>
    <string name="torso">Torso:</string>
    <string name="legs">Legs:</string>
    <string name="start_game">Start Game:</string>
    <string name="draw">Draw:</string>
    <string name="finished">Finished!</string>
    <string name="wait_other">Waiting for the other players</string>
    <string name="click_see">Click to see the drawing!</string>
    <string name="creation">Your Creation:</string>
    <string name="share">share</string>
</resources>
