<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.HeadTorsoLegs.activites.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:text="@string/join" />

        <EditText

            android:id="@+id/editTextJoinName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="left"
            android:background="@drawable/rounded_corners"
            android:text="@string/enter_name" />

        <EditText

            android:id="@+id/editTextCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:background="@drawable/rounded_corners"
            android:text="@string/enter_code" />

        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/buttonJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="@drawable/rounded_corners"
            android:text="@string/join" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>